--- a/views/public/html/JSWSHIPPING-contract.html
+++ b/views/public/html/JSWSHIPPING-contract.html
@@ -579,7 +579,7 @@
 														<tr>
 															<td class="pad">
 																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:12px;font-weight:400;letter-spacing:0px;text-align:left;mso-line-height-alt:19.2px;">
-																	<p style="margin: 0;;"><strong>NAUTILUS SHIPPING INDIA PVT LTD (Employer)</strong></p>
+																	<p style="margin: 0;;"><strong>JSW SHIPPING & LOGISTICS PVT.LTD(Employer)</strong></p>
 																	<p style="margin: 0; margin-bottom: 16px;"><sub>For and on behalf of JSW JAIGARH PORT LTD (As Agent only, of the Shipowner).</sub></p>
 																	<p style="margin: 0; ">&nbsp;</p>
 																	<p style="margin: 0;">&nbsp;</p>
