--- a/views/public/html/YANGTZE-contract.html
+++ b/views/public/html/YANGTZE-contract.html
@@ -74,7 +74,7 @@
 <body>
 <div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
-    <div class="header" style=";">
+    <div class="header">
         <span style="border: 2px solid black ;padding: 5px;"><strong>NEMO ID: <span id="candidateId"></span></strong></span>
         <span style="border: 2px solid black ;margin-left: 600px;padding: 5px;"><strong>RPSL/CHN/012</strong></span>
     </div>
@@ -446,7 +446,7 @@
 														<tr>
 															<td class="pad">
 																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:12px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
-																	<p style="margin: 0; margin-bottom: 16px;"><strong>NAUTILUS SHIPPING INDIA PVT LTD (Employer)</strong></p>
+																	<p style="margin: 0; margin-bottom: 16px;"><strong>BRAVO MARINE PRIVATE LIMITED (Employer)</strong></p>
 																	<p style="margin: 0; margin-bottom: 16px;"><sub>For and on behalf of Bravo Marine PVT LTD(the ‘Manager’).As Agent (As Agent only, of the ‘Shipowner’).</sub></p>
 																	<p style="margin: 0; margin-bottom: 16px;">&nbsp;</p>
 																	<p style="margin: 0; margin-bottom: 16px;">&nbsp;</p>
