--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -578,7 +578,7 @@
 															<tr>
 																<td class="pad">
 																	<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:12px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:left;mso-line-height-alt:19.2px;">
-																		<p style="margin: 0; margin-bottom: 16px;"><strong>NAUTILUS SHIPPING INDIA PVT LTD (Employer)</strong></p>
+																		<p style="margin: 0; margin-bottom: 16px;"><strong>JSW JAIGARH PORT LTD (Employer)</strong></p>
 																		<p style="margin: 0; margin-bottom: 16px;"><sub>For and on behalf of JSW JAIGARH PORT LTD (As Agent only, of the Shipowner).</sub></p>
 																		<p style="margin: 0; margin-bottom: 16px;">&nbsp;</p>
 																		<p style="margin: 0; margin-bottom: 16px;">&nbsp;</p>
