--- a/views/public/html/add-c-evaluation.html
+++ b/views/public/html/add-c-evaluation.html
@@ -334,7 +334,7 @@
     <script>
       let activeMenu = "";
       let activesub = "";
-      let currentPage = "";
+      let currentPage = "Evaluation";
     </script>
     <script src="./menu.js"></script>
 
