change active menu

--- a/views/public/html/edit-grade.html
+++ b/views/public/html/edit-grade.html
@@ -223,7 +223,7 @@
     <!-- endbuild -->
 
     <script>
-      let activeMenu = "grad";
+      let activeMenu = "grade";
       let activesub = "viewgrade";
       let currentPage = "Grade";
     </script>
