--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -78,6 +78,7 @@
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
 
     <!-- Page CSS -->
 
@@ -647,13 +648,27 @@
                               
                                
                                 <!-- Personal Content -->
-                                <div id="personalContent" style="display: none;">
+                                <div id="personalContent">
+                                  <div class="row">
+                                    <div class="col-md-2">
+                                      <button class="btn btn-primary" type="button" onclick="sendApplicationMali()" id="sendMailBtn">
+                                        Send Application
+                                      </button>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="input-group">
+                                        <input type="text" class="form-control" placeholder="Application URL" aria-label="Recipient's username" aria-describedby="copyApplication" id="applicationURL">
+                                        <span class="input-group-text" id="copyApplication"><i class="fa-solid fa-copy"></i></span>
+                                      </div>
+                                    </div>
+                                  </div>
+                                 
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
                                         <div  >
                                           <!-- No need for the hidden input here -->
-                                          <div id="imageContainer" class="d-flex justify-content-center">
-                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class=" border border-primary border-5" style="width: 100px;height: auto;">
+                                          <div id="imageContainer" class="d-flex justify-content-center" >
+                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class=" border border-primary border-5" style="width: 100px;height: auto; display: none;">
                                           </div>
                                       </div>
                                       
@@ -873,6 +888,34 @@
                                                 <input type="text" class="form-control small-font" id="edit_candidate_p_mobi1"  aria-describedby="fieldX_2_Help"  />
                                             </div>
                                           </div>
+                                          <div class="content-wrapper mt-5 mb-5 rounded-3">
+                                            <div class="w-100 ">
+                                                <div class="">
+                                                  <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-2"> PREVIOUS SEA EXPERIENCE </h4>                                                     
+                                                    
+                                                        <table class="table table table-striped table-bordered " style="font-size: 12px;">
+                                                            <thead>
+                                                                <tr>
+                                                                  <th scope="col" >S.no</th>
+                                                                    <th scope="col">From</th>
+                                                                    <th scope="col">To</th>
+                                                                    <th scope="col">Vessel Name</th>
+                                                                    <th scope="col">Flag</th>
+                                                                    <th scope="col">DWT</th>        
+                                                                    <th scope="col">KWT</th>
+                                                                    <th scope="col">Engine</th>
+                                                                    <th scope="col">Type of Vessel</th>
+                                                                    <th scope="col">Position</th>
+                                                                    <th scope="col">Remarks</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody id="experienceTableBody">
+                                                                <!-- Add more rows for additional entries -->
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                            </div>
                                           <button class="btn btn-danger float-end mt-3" type="submit">Edit Candidate</button>
                                       </div>
                                   </div>
@@ -1465,5 +1508,6 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
   </body>
 </html>
