--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -648,21 +648,7 @@
                               
                                
                                 <!-- Personal Content -->
-                                <div id="personalContent">
-                                  <div class="row">
-                                    <div class="col-md-2">
-                                      <button class="btn btn-primary" type="button" onclick="sendApplicationMali()" id="sendMailBtn">
-                                        Send Application
-                                      </button>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Application URL" aria-label="Recipient's username" aria-describedby="copyApplication" id="applicationURL">
-                                        <span class="input-group-text" id="copyApplication"><i class="fa-solid fa-copy"></i></span>
-                                      </div>
-                                    </div>
-                                  </div>
-                                 
+                                <div id="personalContent">                                 
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
                                         <div  >
@@ -888,7 +874,7 @@
                                                 <input type="text" class="form-control small-font" id="edit_candidate_p_mobi1"  aria-describedby="fieldX_2_Help"  />
                                             </div>
                                           </div>
-                                          <div class="content-wrapper mt-5 mb-5 rounded-3">
+                                          <!-- <div class="content-wrapper mt-5 mb-5 rounded-3">
                                             <div class="w-100 ">
                                                 <div class="">
                                                   <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-2"> PREVIOUS SEA EXPERIENCE </h4>                                                     
@@ -910,12 +896,33 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody id="experienceTableBody">
-                                                                <!-- Add more rows for additional entries -->
                                                             </tbody>
                                                         </table>
                                                     </div>
                                                 </div>
+                                            </div> -->
+
+                                            <div class="row mt-5">
+                                              <div class="col-md-2">
+                                                <button class="btn btn-primary" type="button" onclick="sendApplicationMali()" id="sendMailBtn">
+                                                  Send Application
+                                                </button>
+                                              </div>
+                                              <div class="col-md-6">
+                                                <div class="input-group">
+                                                  <input type="text" class="form-control" placeholder="Application URL" aria-label="Recipient's username" aria-describedby="copyApplication" id="applicationURL">
+                                                  <span class="input-group-text" id="copyApplication"><i class="fa-solid fa-copy"></i></span>
+                                                </div>
+                                              </div>
+                                              <div class="col-md-2">
+                                                <a href="#" id="viewApplication" target="_blank" style="display: none;">
+                                                  <button class="btn btn-primary" type="button">
+                                                    View Application
+                                                  </button>
+                                                </a>
+                                              </div>
                                             </div>
+
                                           <button class="btn btn-danger float-end mt-3" type="submit">Edit Candidate</button>
                                       </div>
                                   </div>
