--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -102,14 +102,14 @@
             </div>
             <div class="title-col">
                 <p class="fw-bolder ">
-                  "PRE-EMPLOYEMENT EVALUATION SHEET OFFICERS - ENGINE"													
+                  PRE-EMPLOYEMENT EVALUATION SHEET OFFICERS - ENGINE													
                 </p>
             </div>
             <div class="info-col">
                 <p class="small p-2 pt-4">
                     FORM NO: OFF 47B<br />
                     REVISION NO: 00<br />
-                    DATE: 17/08/2023
+                    DATE: <span id="applicationDate"></span>
                 </p>
             </div>
         </div>
@@ -501,112 +501,7 @@
   
 
     <div class="" >
-          <div class="bg-gray-100 p-4 border border-dark-1 rounded-1  bg-light mb-4">
-    <h3 class=" ">PRACTICAL SKILLS</h3>
-    <div class="row ">
-    <div class="col-5 border pt-3">
-Number of Contracts in Ranks
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput1">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type or size of the vessels served    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput2">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Last contract sign off date
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput3">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of main engine exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput4">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of AUX engine exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly  id="psInput5">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Cargo cranes/gear (marker) exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly  id="psInput6">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of Cargo carried
-    </div>
-    <div class="col border p-2">
-       <input class="form-control"  readonly id="psInput7">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Type of Cargo pumps(tankers)
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput8">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Trading Area(limited/WW)
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly  id="psInput9">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-Mixed crew (nationalities) exp.
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly id="psInput10">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-ECDIS experience in previous 12 months
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly  id="psInput11">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-PSC experience
-    </div>
-    <div class="col border p-2">
-       <input class="form-control" readonly  id="psInput12">
-    </div>
-</div>
-<div class="row ">
-    <div class="col-5 border pt-3">
-SIRE/CDI experience Right ship
-    </div>
-    <div class="col border p-2">
-       <input class="form-control"  readonly id="psInput13">
-    </div>
-</div>
-  </div>
+       
         <div>
 
           <div class=" border border-black-1 p-3">
@@ -977,6 +872,15 @@ SIRE/CDI experience Right ship
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
+      function addFrontZero(value) {
+        if(value!=="") {
+          if(parseInt(value)<10) {
+              return '0'+value;
+          }else {
+            return value;
+          }
+        }
+      }
       // Function to fetch evaluation data based on candidateId and id
       async function fetchEvaluationData(candidateId, evalId) {
           try {
@@ -985,6 +889,14 @@ SIRE/CDI experience Right ship
               const evaluationData = response.data.values;
               console.log("Fetched Evaluation Data:", evaluationData);
   
+             const applied_date = response?.data?.applied_date || '';
+             if(applied_date!=="") {
+              applieddate = new Date(applied_date);
+              const month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+              applieddate = addFrontZero(applieddate.getDate())+'-'+month[applieddate.getMonth()]+'-'+applieddate.getFullYear();              
+              $('#applicationDate').html(applieddate)
+        }
+             
               // Call function to populate form fields with the evaluation data
               populateFormFields(evaluationData);
           } catch (error) {
