--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -501,7 +501,112 @@
   
 
     <div class="" >
-       
+      <div class="bg-gray-100 p-4 border border-dark-1 rounded-1  bg-light mb-4">
+        <h3 class=" ">PRACTICAL SKILLS</h3>
+        <div class="row ">
+        <div class="col-5 border pt-3">
+    Number of Contracts in Ranks
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text" id="psInput1">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Type or size of the vessels served    </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text" id="psInput2">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Last contract sign off date
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text" id="psInput3">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Type of main engine exp.
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput4">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Type of AUX engine exp.
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput5">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Cargo cranes/gear (marker) exp.
+        </div>
+        <div class="col border p-2">
+           <input class="form-control"  type="text" id="psInput6">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Type of Cargo carried
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput7">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Type of Cargo pumps(tankers)
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text" id="psInput8">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Trading Area(limited/WW)
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput9">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    Mixed crew (nationalities) exp.
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput10">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    ECDIS experience in previous 12 months
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput11">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    PSC experience
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput12">
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-5 border pt-3">
+    SIRE/CID experience
+        </div>
+        <div class="col border p-2">
+           <input class="form-control" type="text"  id="psInput13">
+        </div>
+    </div>
+      </div>
         <div>
 
           <div class=" border border-black-1 p-3">
