--- a/views/public/html/viewapplicationform.html
+++ b/views/public/html/viewapplicationform.html
@@ -318,7 +318,7 @@
                 <p>Position applied for</p>
               </td>
               <td width="170">
-                <input readonly type="text" name="avb_date" id="candidate_c_rank" />
+                <input readonly type="text" name="candidate_c_rank" id="candidate_c_rank" />
               </td>
               <td width="104">
                 <p>Availability Date</p>
@@ -491,11 +491,11 @@
         <table class="fulltable" cellspacing="0" cellpadding="5">
           <thead>
             <tr>
-              <td width="200">
-                <p><strong>Items</strong></p>
+              <td width="100">
+                <p><strong>Document</strong></p>
               </td>
               <td width="151">
-                <p><strong>Numbers</strong></p>
+                <p><strong>Document Numbers</strong></p>
               </td>
               <td width="95">
                 <p><strong>Date Issued</strong></p>
