--- a/views/public/html/applicationform.html
+++ b/views/public/html/applicationform.html
@@ -514,10 +514,10 @@
           <thead>
             <tr>
               <td width="200">
-                <p><strong>Items</strong></p>
+                <p><strong>Document</strong></p>
               </td>
               <td width="151">
-                <p><strong>Numbers</strong></p>
+                <p><strong>Document Numbers</strong></p>
               </td>
               <td width="95">
                 <p><strong>Date Issued</strong></p>
